MDEV-35849: index records in a wrong order

page_cur_dtuple_cmp(): Take DESC index fields into account also when
comparing a NULL value in a ROW_FORMAT≠REDUNDANT record.

Thanks to Elena Stepanova for finding this bug.